--- a/style.css
+++ b/style.css
@@ -20,6 +20,25 @@ h1 {
   
   p {
     text-align: center;
+
+    /* Media Queries for Mobile Devices */
+@media only screen and (max-width: 600px) {
+    header, footer {
+        padding: 10px;
+    }
+
+    nav ul li {
+        display: block;
+        text-align: center;
+        margin: 5px 0;
+    }
+
+    section {
+        padding: 10px;
+        margin: 10px;
+    }
+}
+
   }
   
   
