--- a/style.css
+++ b/style.css
@@ -6,39 +6,15 @@ h1 {
   }
 
   div {
-    width: 200px;
-    padding: 20px;
-    border: 2px solid black;
-    margin: 30px;
-  }
-
-  p {
-    padding: 15px;
-    margin: 10px 5px;
-    background-color: lightgray;
-  }
-  
-  p {
-    text-align: center;
-
-    /* Media Queries for Mobile Devices */
-@media only screen and (max-width: 600px) {
-    header, footer {
-        padding: 10px;
-    }
-
-    nav ul li {
-        display: block;
-        text-align: center;
-        margin: 5px 0;
-    }
-
-    section {
-        padding: 10px;
-        margin: 10px;
-    }
+  width: 200px;
+  padding: 20px;
+  border: 2px solid black;
+  margin: 30px;
 }
 
+.red {
+    background-color: red;
+    color: white;
   }
-  
+
   
